--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       </div>
     </div>
 
+    <button id="myButton">Click me!</button>
+
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-4">
