--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Construction Bidding Tool</title>
-  <script src="./script.js"></script>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -14,7 +13,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
-  <body>
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Construction Bidding Management</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,15 +40,14 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 mx-auto text-center">
-          <h1 class="mt-5">Construction Bidding Made Easy</h1>
+          <h1  id="hugeH1">Construction Bidding Made Easy</h1>
           <p class="lead">Our web app simplifies the bidding process and helps you manage your construction projects with ease.</p>
           <a href="file:///Users/masonmazzaro/JavaScriptProject1/signUp.html#" class="btn btn-lg btn-primary">Get Started</a>
         </div>
       </div>
     </div>
-
     <button id="myButton">Click me!</button>
-
+    <button id="myMessage">Show me!</button>
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-4">
@@ -78,6 +76,8 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
+  </body>
 </main>
   <!-- Footer -->
   <footer class="container">
