database, db.js

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     </div>
     <button id="myButton">Click me!</button>
     <button id="myMessage">Show me!</button>
+    <input type="text" id="job-name" placeholder="Enter Job Name">
+    <textarea id="job-description" placeholder="Enter Job Description"></textarea>
+    <input type="number" id="job-estimate" placeholder="Enter Job Estimate">
+    <div id="user-list"></div>
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-4">
@@ -76,7 +80,8 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./db.js"></script>
+    <script src="./script.js"></script>
   </body>
 </main>
   <!-- Footer -->
