style updates, animations, improved js

--- a/signUp.html
+++ b/signUp.html
@@ -1,20 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Management Software - Sign Up</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign up</title>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QLvABsjt18Z+kfAaP5zXkooJr8W9k"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
   <body>
     <header>
       <h1>Job Management Software</h1>
     </header>
 
     <main class="container">
+          <h1  id="headHarry">Construction Bidding Made Easy</h1>
       <h2>Sign Up</h2>
       <form>
         <div class="form-group">
@@ -36,20 +42,17 @@
         <button type="submit" class="btn btn-primary">Sign Up</button>
       </form>
        <a href="file:///Users/masonmazzaro/JavaScriptProject1/page2.html#" class="btn btn-lg btn-primary">Get Started</a>
+       <button id="signUpSally">Show me!</button>
     </main>
 
     <footer class="container">
-      <hr>
-      <p>Job Management Software &copy; 2023</p>
-    </footer>
-
-    <!-- Bootstrap JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    <hr>
+    <p>&copy; 2023 Construction Bidding Tool. All rights reserved.</p>
+  </footer>
+  <script src="./db.js"></script>
+  <script src="./script.js"></script>
+</body>
+  <!-- Bootstrap JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-    integrity="sha256-wAvxDP/XMYewyjv6UzPQgFV6JtsUGL5ZVCHn+UKSmU=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QLvABsjt18Z+kfAaP5zXkooJr8W9k"
-    crossorigin="anonymous"></script>
-  </body>
-</html>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js
