--- a/index.html
+++ b/index.html
@@ -41,8 +41,21 @@
       <div class="row">
         <div class="col-md-6 mx-auto text-center">
           <h1  id="hugeH1">Construction Bidding Made Easy</h1>
+          <h1  id="headHarry">Construction Bidding Made Easy</h1>
           <p class="lead">Our web app simplifies the bidding process and helps you manage your construction projects with ease.</p>
           <a href="file:///Users/masonmazzaro/JavaScriptProject1/signUp.html#" class="btn btn-lg btn-primary">Get Started</a>
+          <a class="btn btn-lg btn-primary" id="buttonBob">Button Bob</a>
+
+        </div>
+      </div>
+    </div>
+    <div id="divDave">
+      <p class="lead">Our web app simplifies the bidding process and helps you manage your construction projects with ease.</p>
+    </div>
+     <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 mx-auto text-center">
+         <div id="example-div">example div</div>
         </div>
       </div>
     </div>
@@ -80,16 +93,16 @@
         </div>
       </div>
     </div>
-    <script src="./db.js"></script>
-    <script src="./script.js"></script>
-  </body>
+
 </main>
   <!-- Footer -->
   <footer class="container">
     <hr>
     <p>&copy; 2023 Construction Bidding Tool. All rights reserved.</p>
   </footer>
-
+  <script src="./db.js"></script>
+  <script src="./script.js"></script>
+</body>
   <!-- Bootstrap JavaScript -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
